@@ -1,5 +1,5 @@
 name    = Config-Model-Itself
-version = 1.222
+version = 1.223
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
